--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -1010,7 +1010,7 @@ specified by the analogous traversals \fBTV_dfs\fR,
 \fBTV_postdfs\fR and \fBTV_prepostdfs\fR.
 .TP
 \fBTV_bfs\fR : \fItvtype_t\fR
-A traversal of the graph using a bread\(hyfirst search on the
+A traversal of the graph using a breadth\(hyfirst search on the
 graph ignoring edge directions. See the item on \fBTV_dfs\fR above
 for the role of \fB$tvroot\fP.
 .SH EXAMPLES
