--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+June 7, 2012
+	- Add random rooted tree generation to gvgen
 February 29, 2012
 	- Allow GVPRPATH to specify that the default path be prepended or appended to it.
 February 27, 2012
