Note that attribute values are case-sensitive.

--- a/doc/infosrc/attrs.1
+++ b/doc/infosrc/attrs.1
@@ -17,6 +17,9 @@ edge, etc.) which use the attribute and the type of the attribute
 also gives a default value for the attribute, a minimum allowed setting
 for numeric attributes, and certain restrictions on the use of the attribute.
 <P>
+Note that attribute names are case-sensitive. 
+This is usually true for attribute values as well, unless noted.
+<P>
 All Graphviz attributes are specified by name-value pairs. Thus, to
 set the fillcolor of a node <TT>abc</TT>, one would use
 <TABLE>
