--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+July 12, 2012
+	- For HTML-like labels, provide rounded cells, and dashed or dotted borders.
+	- Add lcurve and rcurve arrowheads.
+	- Add prototype pie chart and striped fills.
 June 7, 2012
 	- Add random rooted tree generation to gvgen
 February 29, 2012
