Update documentation concerning the synthetic biology shapes

--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -19,6 +19,11 @@ The point shape is special in that it is
 only affected by the <A HREF=attrs.html#d:peripheries><TT>peripheries</TT></A>, 
 <A HREF=attrs.html#d:width><TT>width</TT></A> and
 <A HREF=attrs.html#d:height><TT>height</TT></A> attributes.
+<P>
+The shapes <TT>note</TT>, <TT>tab</TT>, <TT>folder</TT>,
+<TT>box3d</TT> and <TT>component</TT> were provided by Pander.
+The synthetic biology shapes <TT>rpromoter</TT>, <TT>rarrow</TT>, <TT>larrow</TT> and
+<TT>lpromoter</TT> were contributed by Jenny Cheng.
 
 <H2><A NAME=record>Record-based Nodes</A></H2>
 These are specified by shape values of "record" and "Mrecord".
