Jenny didn't really want earlier shapes removed

--- a/doc/infosrc/shapes.2
+++ b/doc/infosrc/shapes.2
@@ -37,8 +37,12 @@ The synthetic biology shapes:
 <TT>insulator</TT>,
 <TT>ribosite</TT>,
 <TT>rnastab</TT>,
-<TT>proteasesite</TT> and
-<TT>proteinstab</TT>
+<TT>proteasesite</TT>,
+<TT>proteinstab</TT>,
+<TT>rpromoter</TT>,
+<TT>rarrow</TT>,
+<TT>larrow</TT> and
+<TT>lpromoter</TT>
 were contributed by Jenny Cheng.
 
 <H2><A NAME=record>Record-based Nodes</A></H2>
