--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,4 @@
-Notes on 2.0
+See the ChangeLog file for detailed technical news for this release.
 
-This release is licensed under the CPL.
+The link http://www.graphviz.org/News.php provides more high-level descriptions.
+
