--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+November 27, 2012
+	- Add graphml2gv and gv2gml to Windows package.
 September 25, 2012
 	- Support edges using curved arcs.
 August 16, 2012
