Fix typo in man page.

--- a/cmd/gvpr/gvpr.1
+++ b/cmd/gvpr/gvpr.1
@@ -1172,7 +1172,7 @@ avoid pattern matching.
 As of 24 April 2008, \fBgvpr\fP switched to using a new, underlying
 graph library, which uses the simpler model that there is only one
 copy of a node, not one copy for each subgraph logically containing
-it. This means that iterators such as \Inxtnode\P cannot traverse
+it. This means that iterators such as \fInxtnode\fP cannot traverse
 a subgraph using just a node argument. For this reason, subgraph
 traversal requires new functions ending in "_sg", which also take
 a subgraph argument. The versions without that suffix will always
