apply man pages patches from ville.skytta@iki.fi

--- a/cmd/dot/osage.1
+++ b/cmd/dot/osage.1
@@ -421,7 +421,7 @@ digraph test123 {
           }
         }
         b [shape=box];
-        c [label="hello\\nworld",color=blue,fontsize=24,
+        c [label="hello\enworld",color=blue,fontsize=24,
              fontname="Palatino\-Italic",fontcolor=red,style=filled];
         a \-> z
         x \-> z
