--- a/doc/infosrc/lang.2
+++ b/doc/infosrc/lang.2
@@ -95,8 +95,8 @@ also use the font. For some attributes, however, this property is
 undesirable. If one attaches a label to the root graph, it is probably
 not the desired effect to have the label used by all subgraphs. Rather
 than listing the graph attribute at the top of the graph, and the
-resetting the attribute as needed in the subgraphs, one can simple defer
-the attribute definition if the graph until the appropriate subgraphs
+resetting the attribute as needed in the subgraphs, one can simply defer
+the attribute definition in the graph until the appropriate subgraphs
 have been defined.
 <P>
 If an edge belongs to a cluster, its endpoints belong to that cluster.
