--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+February 14, 2013
+	- Release 2.30.1
+	- various build fixes
 January 13, 2013
-	- Release 2.30
+	- Release 2.30.0
 November 27, 2012
 	- Add graphml2gv and gv2gml to Windows package.
 September 25, 2012
