--- a/doc/libguide/codegen.tex
+++ b/doc/libguide/codegen.tex
@@ -252,9 +252,8 @@ relevant to input and GUIs.
 \begin{description}
 \item[{\tt common}]
 This points to various information valid throughout the duration
-of the application using \gviz. In particular, {\tt common->user}
-gives the user name associated to the related {\tt GVC\_t} value
-(see Section~\ref{sec:gvc}), and {\tt common->info} contains \gviz\ version
+of the application using \gviz. In particular, 
+the {\tt common->info} contains \gviz\ version
 information, as described in Section~\ref{sec:info}.
 \item[{\tt output\_file}]
 The {\tt FILE*} value for an open stream on
