--- a/doc/libguide/libguide.tex
+++ b/doc/libguide/libguide.tex
@@ -1,6 +1,7 @@
 \documentclass[11pt]{article}
 %\usepackage{graphicx}
 \usepackage{times}
+\usepackage{url}
 
 %\addtolength{\oddsidemargin}{-0.5in}
 %\addtolength{\evensidemargin}{-0.5in}
@@ -18,23 +19,25 @@
 \def\DOT{{\it DOT}}
 \def\neato{{\it neato}}
 \def\fdp{{\it fdp}}
+\def\sfdp{{\it sfdp}}
 \def\twopi{{\it twopi}}
 \def\circo{{\it circo}}
 \def\gviz{{\it Graphviz}}
-\def\graph{{\tt graph}}
+\def\graph{{\tt cgraph}}
 \def\agraph{{\tt libagraph}}
 \def\pack{{\tt pack}}
 \def\gvc{{\tt GVC\_t}}
 
-\newcommand{\lastedited}{16 August 2006}
+\newcommand{\lastedited}{17 February 2013}
 \date{\today}
-\newcommand{\mymark}{\gviz{} Drawing Library Manual, \today \hfil }
+\newcommand{\mymark}{\gviz{} Library Manual, \today \hfil }
 \markboth{\mymark}{\mymark}
 
 \begin{document}
 \bibliographystyle{alpha}
 \author{Emden R. Gansner}
-\title{Drawing graphs with \gviz}
+\title{Using \gviz as a Library \\
+(cgraph version)}
 \maketitle
 
 \newpage
