Remove double period

--- a/lib/cgraph/cgraph.3
+++ b/lib/cgraph/cgraph.3
@@ -518,7 +518,7 @@ The \fBclose\fP function is used to terminate the memory subsystem, freeing any 
 open resources.
 For actual allocation, the library uses the functions
 \fBagalloc\fP, \fBagrealloc\fP, and \fBagfree\fP, which provide simple wrappers for
-the underlying discipline functions \fBalloc\fP, \fBresize\fP, and \fBfree\fP..
+the underlying discipline functions \fBalloc\fP, \fBresize\fP, and \fBfree\fP.
 .PP
 When Libcgraph is compiled with Vmalloc (which is not the default),
 each graph has its own heap.
