--- a/doc/libgraph/sccmap.tex
+++ b/doc/libgraph/sccmap.tex
@@ -1,372 +1,364 @@
 % Remember to use the lgrind style
 
 \Head{}
-\File{sccmap.c}{2002}{7}{10}{15:30}{7815}
-\L{\LB{\C{}/*}}
-\L{\LB{}\Tab{4}{This_software_may_only_be_used_by_you_under_license_from_AT\&T_Corp.}}
-\L{\LB{}\Tab{4}{(\3AT\&T\3).}\Tab{15}{A_copy_of_AT\&T{'}s_Source_Code_Agreement_is_available_at}}
-\L{\LB{}\Tab{4}{AT\&T{'}s_Internet_website_having_the_URL:}}
-\L{\LB{}\Tab{4}{\<http://www.research.att.com/sw/tools/graphviz/license/source.html\>}}
-\L{\LB{}\Tab{4}{If_you_received_this_software_without_first_entering_into_a_license}}
-\L{\LB{}\Tab{4}{with_AT\&T,_you_have_an_infringing_copy_of_this_software_and_cannot_use}}
-\L{\LB{}\Tab{4}{it_without_violating_AT\&T{'}s_intellectual_property_rights.}}
-\L{\LB{*/\CE{}}}
+\File{sccmap.c}{2013}{3}{6}{13:05}{7401}
 \L{\LB{}}
-\L{\LB{\C{}/*}}
-\L{\LB{_*_Written_by_Stephen_North}}
-\L{\LB{_*_Updated_by_Emden_Gansner}}
-\L{\LB{_*/\CE{}}}
+\L{\LB{\C{}/*************************************************************************}}
+\L{\LB{_*_Copyright_(c)_2011_AT\&T_Intellectual_Property_}}
+\L{\LB{_*_All_rights_reserved._This_program_and_the_accompanying_materials}}
+\L{\LB{_*_are_made_available_under_the_terms_of_the_Eclipse_Public_License_v1.0}}
+\L{\LB{_*_which_accompanies_this_distribution,_and_is_available_at}}
+\L{\LB{_*_http://www.eclipse.org/legal/epl-v10.html}}
+\L{\LB{_*}}
+\L{\LB{_*_Contributors:_See_CVS_logs._Details_at_http://www.graphviz.org/}}
+\L{\LB{_*************************************************************************/\CE{}}}
 \L{\LB{}}
-\L{\LB{\C{}/*}}
-\L{\LB{_*_This_is_a_filter_that_reads_a_graph,_searches_for_strongly}}
-\L{\LB{_*_connected_components,_and_writes_each_as_a_separate_graph}}
-\L{\LB{_*_along_with_a_map_of_the_components.}}
-\L{\LB{_*/\CE{}}}
 \L{\LB{\K{\#ifdef}_\V{HAVE\_CONFIG\_H}}}
-\L{\LB{\K{\#include}_\<\V{gvconfig}.\V{h}\>}}
+\L{\LB{\K{\#include}_\S{}\3config.h\3\SE{}}}
 \L{\LB{\K{\#endif}}}
 \L{\LB{}}
 \L{\LB{\K{\#include}_\<\V{stdio}.\V{h}\>}}
+\L{\LB{\K{\#include}_\<\V{stdlib}.\V{h}\>}}
 \L{\LB{\K{\#ifdef}_\V{HAVE\_UNISTD\_H}}}
-\L{\LB{\K{\#include}}\Tab{16}{\<\V{unistd}.\V{h}\>}}
+\L{\LB{\K{\#include}_\<\V{unistd}.\V{h}\>}}
 \L{\LB{\K{\#endif}}}
-\L{\LB{\K{\#include}_\<\V{agraph}.\V{h}\>}}
-\L{\LB{\K{\#include}_\<\V{ingraphs}.\V{h}\>}}
+\L{\LB{\K{\#include}_\S{}\3cgraph.h\3\SE{}}}
+\L{\LB{\K{\#include}_\S{}\3ingraphs.h\3\SE{}}}
 \L{\LB{}}
-\L{\LB{\K{\#ifndef}_\V{HAVE\_GETOPT\_DECL}}}
+\L{\LB{\K{\#ifdef}_\V{HAVE\_GETOPT\_H}}}
 \L{\LB{\K{\#include}_\<\V{getopt}.\V{h}\>}}
+\L{\LB{\K{\#else}}}
+\L{\LB{\K{\#include}_\S{}\3compat\_getopt.h\3\SE{}}}
 \L{\LB{\K{\#endif}}}
 \L{\LB{}}
 \L{\LB{\K{\#define}_\V{INF}_((\K{unsigned}_\K{int})(\-\N{1}))}}
 \L{\LB{}}
 \L{\LB{\K{typedef}_\K{struct}_\V{Agraphinfo\_t}_\{}}
-\L{\LB{}\Tab{4}{\V{Agrec\_t}}\Tab{19}{\V{h};}}
-\L{\LB{}\Tab{4}{\V{Agnode\_t}*}\Tab{19}{\V{rep};}}
+\L{\LB{}\Tab{4}{\V{Agrec\_t}_\V{h};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_*\V{rep};}}
 \L{\LB{\}_\V{Agraphinfo\_t};}}
 \L{\LB{}}
 \L{\LB{\K{typedef}_\K{struct}_\V{Agnodeinfo\_t}_\{}}
-\L{\LB{}\Tab{4}{\V{Agrec\_t}}\Tab{19}{\V{h};}}
-\L{\LB{}\Tab{4}{\K{unsigned}_\K{int}}\Tab{19}{\V{val};}}
-\L{\LB{}\Tab{4}{\V{Agraph\_t}*}\Tab{19}{\V{scc};}}
+\L{\LB{}\Tab{4}{\V{Agrec\_t}_\V{h};}}
+\L{\LB{}\Tab{4}{\K{unsigned}_\K{int}_\V{val};}}
+\L{\LB{}\Tab{4}{\V{Agraph\_t}_*\V{scc};}}
 \L{\LB{\}_\V{Agnodeinfo\_t};}}
 \L{\LB{}}
-\L{\LB{\K{\#ifdef}_\V{INLINE}}}
 \L{\LB{\K{\#define}_\V{getrep}(\V{g})}\Tab{19}{(((\V{Agraphinfo\_t}*)(\V{g}\-\!\>\V{base}.\V{data}))\-\!\>\V{rep})}}
 \L{\LB{\K{\#define}_\V{setrep}(\V{g},\V{rep})}\Tab{23}{(\V{getrep}(\V{g})_=_\V{rep})}}
 \L{\LB{\K{\#define}_\V{getscc}(\V{n})}\Tab{21}{(((\V{Agnodeinfo\_t}*)((\V{n})\-\!\>\V{base}.\V{data}))\-\!\>\V{scc})}}
 \L{\LB{\K{\#define}_\V{setscc}(\V{n},\V{sub})}\Tab{25}{(\V{getscc}(\V{n})_=_\V{sub})}}
 \L{\LB{\K{\#define}_\V{getval}(\V{n})}\Tab{21}{(((\V{Agnodeinfo\_t}*)((\V{n})\-\!\>\V{base}.\V{data}))\-\!\>\V{val})}}
 \L{\LB{\K{\#define}_\V{setval}(\V{n},\V{newval})}\Tab{28}{(\V{getval}(\V{n})_=_\V{newval})}}
-\L{\LB{\K{\#else}}}
-\L{\LB{\K{static}_\V{Agnode\_t}_*}}
-\index{getrep}\Proc{getrep}\L{\LB{\V{getrep}(\V{Agraph\_t}_*\V{g})_}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{return}_(((\V{Agraphinfo\_t}*)(\V{g}\-\!\>\V{base}.\V{data}))\-\!\>\V{rep});}}
-\L{\LB{\}}}
-\L{\LB{\K{static}_\K{void}_}}
-\index{setrep}\Proc{setrep}\L{\LB{\V{setrep}(\V{Agraph\_t}_*\V{g},_\V{Agnode\_t}_*\V{rep})}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{((\V{Agraphinfo\_t}*)(\V{g}\-\!\>\V{base}.\V{data}))\-\!\>\V{rep}_=_\V{rep};}}
-\L{\LB{\}}}
-\L{\LB{\K{static}_\V{Agraph\_t}_*}}
-\index{getscc}\Proc{getscc}\L{\LB{\V{getscc}(\V{Agnode\_t}_*\V{n})_}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{return}_(((\V{Agnodeinfo\_t}*)(\V{n}\-\!\>\V{base}.\V{data}))\-\!\>\V{scc});}}
-\L{\LB{\}}}
-\L{\LB{\K{static}_\K{void}_}}
-\index{setscc}\Proc{setscc}\L{\LB{\V{setscc}(\V{Agnode\_t}_*\V{n},_\V{Agraph\_t}_*\V{scc})_}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{((\V{Agnodeinfo\_t}*)(\V{n}\-\!\>\V{base}.\V{data}))\-\!\>\V{scc}_=_\V{scc};}}
-\L{\LB{\}}}
-\L{\LB{\K{static}_\K{int}}}
-\index{getval}\Proc{getval}\L{\LB{\V{getval}(\V{Agnode\_t}_*\V{n})_}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{return}_(((\V{Agnodeinfo\_t}*)(\V{n}\-\!\>\V{base}.\V{data}))\-\!\>\V{val});}}
-\L{\LB{\}}}
-\L{\LB{\K{static}_\K{void}_}}
-\index{setval}\Proc{setval}\L{\LB{\V{setval}(\V{Agnode\_t}_*\V{n},_\K{int}_\V{v})}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{((\V{Agnodeinfo\_t}*)(\V{n}\-\!\>\V{base}.\V{data}))\-\!\>\V{val}_=_\V{v};}}
-\L{\LB{\}}}
-\L{\LB{\K{\#endif}}}
 \L{\LB{}}
 \L{\LB{\C{}/*********_stack_***********/\CE{}}}
 \L{\LB{\K{typedef}_\K{struct}_\{}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}**}\Tab{15}{\V{data};}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}**}\Tab{15}{\V{ptr};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_**\V{data};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_**\V{ptr};}}
 \L{\LB{\}_\V{Stack};}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}}}
-\index{initStack}\Proc{initStack}\L{\LB{\V{initStack}_(\V{Stack}*_\V{sp},_\K{int}_\V{sz})}}
+\index{initStack}\Proc{initStack}\L{\LB{\K{static}_\K{void}_\V{initStack}(\V{Stack}_*_\V{sp},_\K{int}_\V{sz})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{sp}\-\!\>\V{data}_=_(\V{Agnode\_t}**)\V{malloc}(\V{sz}*\K{sizeof}(\V{Agnode\_t}*));}}
-\L{\LB{}\Tab{2}{\V{sp}\-\!\>\V{ptr}_=_\V{sp}\-\!\>\V{data};}}
+\L{\LB{}\Tab{4}{\V{sp}\-\!\>\V{data}_=_(\V{Agnode\_t}_**)_\V{malloc}(\V{sz}_*_\K{sizeof}(\V{Agnode\_t}_*));}}
+\L{\LB{}\Tab{4}{\V{sp}\-\!\>\V{ptr}_=_\V{sp}\-\!\>\V{data};}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}}}
-\index{freeStack}\Proc{freeStack}\L{\LB{\V{freeStack}_(\V{Stack}*_\V{sp})}}
+\index{freeStack}\Proc{freeStack}\L{\LB{\K{static}_\K{void}_\V{freeStack}(\V{Stack}_*_\V{sp})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{free}_(\V{sp}\-\!\>\V{data});}}
+\L{\LB{}\Tab{4}{\V{free}(\V{sp}\-\!\>\V{data});}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{\#ifdef}_\V{INLINE}}}
-\L{\LB{\K{\#define}_\V{push}(\V{sp},\V{n})_(*((\V{sp})\-\!\>\V{ptr}++)_=_\V{n})}}
-\L{\LB{\K{\#define}_\V{top}(\V{sp})_(*((\V{sp})\-\!\>\V{ptr}_\-_\N{1}))}}
-\L{\LB{\K{\#define}_\V{pop}(\V{sp})_(*(\-\-((\V{sp})\-\!\>\V{ptr})))}}
-\L{\LB{\K{\#else}}}
-\L{\LB{\K{static}_\K{void}}}
-\index{push}\Proc{push}\L{\LB{\V{push}_(\V{Stack}*_\V{sp},_\V{Agnode\_t}*_\V{n})}}
+\index{push}\Proc{push}\L{\LB{\K{static}_\K{void}_\V{push}(\V{Stack}_*_\V{sp},_\V{Agnode\_t}_*_\V{n})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{*(\V{sp}\-\!\>\V{ptr}++)_=_\V{n};}}
+\L{\LB{}\Tab{4}{*(\V{sp}\-\!\>\V{ptr}++)_=_\V{n};}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\V{Agnode\_t}*}}
-\index{top}\Proc{top}\L{\LB{\V{top}_(\V{Stack}*_\V{sp})}}
+\index{top}\Proc{top}\L{\LB{\K{static}_\V{Agnode\_t}_*\V{top}(\V{Stack}_*_\V{sp})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{return}_*(\V{sp}\-\!\>\V{ptr}_\-_\N{1});}}
+\L{\LB{}\Tab{4}{\K{return}_*(\V{sp}\-\!\>\V{ptr}_\-_\N{1});}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\V{Agnode\_t}*}}
-\index{pop}\Proc{pop}\L{\LB{\V{pop}_(\V{Stack}*_\V{sp})}}
+\index{pop}\Proc{pop}\L{\LB{\K{static}_\V{Agnode\_t}_*\V{pop}(\V{Stack}_*_\V{sp})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{sp}\-\!\>\V{ptr}\-\-;}}
-\L{\LB{}\Tab{2}{\K{return}_*(\V{sp}\-\!\>\V{ptr});}}
+\L{\LB{}\Tab{4}{\V{sp}\-\!\>\V{ptr}\-\-;}}
+\L{\LB{}\Tab{4}{\K{return}_*(\V{sp}\-\!\>\V{ptr});}}
 \L{\LB{\}}}
-\L{\LB{\K{\#endif}}}
-\L{\LB{}}
 \L{\LB{}}
 \L{\LB{\C{}/*********_end_stack_***********/\CE{}}}
 \L{\LB{}}
 \L{\LB{\K{typedef}_\K{struct}_\{}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{7}{\V{Comp};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{7}{\V{ID};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{7}{\V{N\_nodes\_in\_nontriv\_SCC};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{Comp};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{ID};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{N\_nodes\_in\_nontriv\_SCC};}}
 \L{\LB{\}_\V{sccstate};}}
 \L{\LB{}}
-\L{\LB{\K{int}}\Tab{15}{\V{wantDegenerateComp};}}
-\L{\LB{\K{int}}\Tab{15}{\V{Silent};}}
-\L{\LB{\K{int}}\Tab{15}{\V{Verbose};}}
-\L{\LB{\K{char}*}\Tab{15}{\V{CmdName};}}
-\L{\LB{\K{char}**}\Tab{15}{\V{Files};}}
+\L{\LB{\K{static}_\K{int}_\V{wantDegenerateComp};}}
+\L{\LB{\K{static}_\K{int}_\V{Silent};}}
+\L{\LB{\K{static}_\K{int}_\V{StatsOnly};}}
+\L{\LB{\K{static}_\K{int}_\V{Verbose};}}
+\L{\LB{\K{static}_\K{char}_*\V{CmdName};}}
+\L{\LB{\K{static}_\K{char}_**\V{Files};}}
+\L{\LB{\K{static}_\V{FILE}_*\V{outfp};}\Tab{32}{\C{}/*_output;_stdout_by_default_*/\CE{}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}_}}
-\index{nodeInduce}\Proc{nodeInduce}\L{\LB{\V{nodeInduce}(\V{Agraph\_t}_*\V{g})}}
+\index{nodeInduce}\Proc{nodeInduce}\L{\LB{\K{static}_\K{void}_\V{nodeInduce}(\V{Agraph\_t}_*_\V{g},_\V{Agraph\_t}_*_\V{map})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}}\Tab{18}{*\V{n},_*\V{rootn};}}
-\L{\LB{}\Tab{2}{\V{Agedge\_t}}\Tab{18}{*\V{e};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_*\V{n};}}
+\L{\LB{}\Tab{4}{\V{Agedge\_t}_*\V{e};}}
+\L{\LB{}\Tab{4}{\V{Agraph\_t}_*\V{rootg}_=_\V{agroot}(\V{g});}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{n}))_\{}}
-\L{\LB{}\Tab{4}{\V{rootn}_=_\V{agsubnode}(\V{agroot}(\V{g}),\V{n},\V{FALSE});}}
-\L{\LB{}\Tab{4}{\K{for}_(\V{e}_=_\V{agfstout}(\V{rootn});_\V{e};_\V{e}_=_\V{agnxtout}(\V{e}))_\{}}
-\L{\LB{}\Tab{6}{\K{if}_(\V{agsubnode}(\V{g},\V{aghead}(\V{e}),\V{FALSE}))_\V{agsubedge}(\V{g},\V{e},\V{TRUE});}}
-\L{\LB{}\Tab{6}{\K{else}_\{}}
-\L{\LB{}\Tab{8}{\K{if}_(\V{getscc}(\V{aghead}(\V{e}))_\&\&_\V{getscc}(\V{agtail}(\V{e})))}}
-\L{\LB{}\Tab{10}{\V{agedge}(\V{getrep}(\V{getscc}(\V{agtail}(\V{e}))),\V{getrep}(\V{getscc}(\V{aghead}(\V{e}))),}}
-\L{\LB{}\Tab{12}{\V{NIL}(\K{char}*),\V{TRUE});}}
-\L{\LB{}\Tab{6}{\}}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{g},_\V{n}))_\{}}
+\L{\LB{}\Tab{8}{\K{for}_(\V{e}_=_\V{agfstout}(\V{rootg},_\V{n});_\V{e};_\V{e}_=_\V{agnxtout}(\V{rootg},_\V{e}))_\{}}
+\L{\LB{}\Tab{12}{\K{if}_(\V{agsubnode}(\V{g},_\V{aghead}(\V{e}),_\V{FALSE}))}}
+\L{\LB{}\Tab{16}{\V{agsubedge}(\V{g},_\V{e},_\V{TRUE});}}
+\L{\LB{}\Tab{12}{\K{else}_\{}}
+\L{\LB{}\Tab{16}{\V{Agraph\_t}_*\V{tscc}_=_\V{getscc}(\V{agtail}(\V{e}));}}
+\L{\LB{}\Tab{16}{\V{Agraph\_t}_*\V{hscc}_=_\V{getscc}(\V{aghead}(\V{e}));}}
+\L{\LB{}\Tab{16}{\K{if}_(\V{tscc}_\&\&_\V{hscc})}}
+\L{\LB{}\Tab{20}{\V{agedge}(\V{map},_\V{getrep}(\V{tscc}),}}
+\L{\LB{}\Tab{27}{\V{getrep}(\V{hscc}),_\V{NIL}(\K{char}_*),_\V{TRUE});}}
+\L{\LB{}\Tab{12}{\}}}
+\L{\LB{}\Tab{8}{\}}}
 \L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{2}{\}}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{int}_}}
-\index{visit}\Proc{visit}\L{\LB{\V{visit}(\V{Agnode\_t}_*\V{n},_\V{Agraph\_t}*_\V{map},_\V{Stack}*_\V{sp},_\V{sccstate}*_\V{st})}}
+\index{visit}\Proc{visit}\L{\LB{\K{static}_\K{int}_\V{visit}(\V{Agnode\_t}_*_\V{n},_\V{Agraph\_t}_*_\V{map},_\V{Stack}_*_\V{sp},_\V{sccstate}_*_\V{st})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{unsigned}_\K{int}}\Tab{16}{\V{m},\V{min};}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}*}\Tab{16}{\V{t};}}
-\L{\LB{}\Tab{2}{\V{Agraph\_t}*}\Tab{16}{\V{subg};}}
-\L{\LB{}\Tab{2}{\V{Agedge\_t}*}\Tab{16}{\V{e};}}
+\L{\LB{}\Tab{4}{\K{unsigned}_\K{int}_\V{m},_\V{min};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_*\V{t};}}
+\L{\LB{}\Tab{4}{\V{Agraph\_t}_*\V{subg};}}
+\L{\LB{}\Tab{4}{\V{Agedge\_t}_*\V{e};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{min}_=_++(\V{st}\-\!\>\V{ID});}}
-\L{\LB{}\Tab{2}{\V{setval}(\V{n},\V{min});}}
-\L{\LB{}\Tab{2}{\V{push}_(\V{sp},_\V{n});}}
+\L{\LB{}\Tab{4}{\V{min}_=_++(\V{st}\-\!\>\V{ID});}}
+\L{\LB{}\Tab{4}{\V{setval}(\V{n},_\V{min});}}
+\L{\LB{}\Tab{4}{\V{push}(\V{sp},_\V{n});}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\K{for}_(\V{e}_=_\V{agfstout}(\V{n});_\V{e};_\V{e}_=_\V{agnxtout}(\V{e}))_\{}}
-\L{\LB{}\Tab{4}{\V{t}_=_\V{aghead}(\V{e});}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{getval}(\V{t})_==_\N{0})_\V{m}_=_\V{visit}(\V{t},\V{map},\V{sp},\V{st});}}
-\L{\LB{}\Tab{4}{\K{else}_\V{m}_=_\V{getval}(\V{t});}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{m}_\<_\V{min})_\V{min}_=_\V{m};}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{getval}(\V{n})_==_\V{min})_\{}}
-\L{\LB{}\Tab{4}{\K{if}_(!\V{wantDegenerateComp}_\&\&_(\V{top}(\V{sp})_==_\V{n}))_\{}}
-\L{\LB{}\Tab{6}{\V{setval}(\V{n},\V{INF});}}
-\L{\LB{}\Tab{6}{\V{pop}(\V{sp});}}
+\L{\LB{}\Tab{4}{\K{for}_(\V{e}_=_\V{agfstout}(\V{n}\-\!\>\V{root},_\V{n});_\V{e};_\V{e}_=_\V{agnxtout}(\V{n}\-\!\>\V{root},_\V{e}))_\{}}
+\L{\LB{}\Tab{8}{\V{t}_=_\V{aghead}(\V{e});}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{getval}(\V{t})_==_\N{0})}}
+\L{\LB{}\Tab{12}{\V{m}_=_\V{visit}(\V{t},_\V{map},_\V{sp},_\V{st});}}
+\L{\LB{}\Tab{8}{\K{else}}}
+\L{\LB{}\Tab{12}{\V{m}_=_\V{getval}(\V{t});}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{m}_\<_\V{min})}}
+\L{\LB{}\Tab{12}{\V{min}_=_\V{m};}}
 \L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{4}{\K{else}_\{}}
-\L{\LB{}\Tab{6}{\K{char}_\V{name}[\N{32}];}}
-\L{\LB{}\Tab{6}{\V{Agraph\_t}*}\Tab{18}{\V{G}_=_\V{agraphof}(\V{n});;}}
-\L{\LB{}\Tab{6}{\V{sprintf}(\V{name},\S{}\3cluster\_\%d\3\SE{},(\V{st}\-\!\>\V{Comp})++);}}
-\L{\LB{}\Tab{6}{\V{subg}_=_\V{agsubg}(\V{G},\V{name},\V{TRUE});}}
-\L{\LB{}\Tab{6}{\V{agbindrec}(\V{subg},\S{}\3scc\_graph\3\SE{},\K{sizeof}(\V{Agraphinfo\_t}),\V{TRUE});}}
-\L{\LB{}\Tab{6}{\V{setrep}(\V{subg},\V{agnode}(\V{map},\V{name},\V{TRUE}));}}
-\L{\LB{}\Tab{6}{\K{do}_\{}}
-\L{\LB{}\Tab{8}{\V{t}_=_\V{pop}(\V{sp});}}
-\L{\LB{}\Tab{8}{\V{agsubnode}(\V{subg},\V{t},\V{TRUE});}}
-\L{\LB{}\Tab{8}{\V{setval}(\V{t},\V{INF});}}
-\L{\LB{}\Tab{8}{\V{setscc}(\V{t},\V{subg});}}
-\L{\LB{}\Tab{8}{\V{st}\-\!\>\V{N\_nodes\_in\_nontriv\_SCC}++;}}
-\L{\LB{}\Tab{6}{\}_\K{while}_(\V{t}_!=_\V{n});}}
-\L{\LB{}\Tab{6}{\V{nodeInduce}(\V{subg});}}
-\L{\LB{}\Tab{6}{\K{if}_(!\V{Silent})_\V{agwrite}(\V{subg},\V{stdout});}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{getval}(\V{n})_==_\V{min})_\{}}
+\L{\LB{}\Tab{8}{\K{if}_(!\V{wantDegenerateComp}_\&\&_(\V{top}(\V{sp})_==_\V{n}))_\{}}
+\L{\LB{}\Tab{12}{\V{setval}(\V{n},_\V{INF});}}
+\L{\LB{}\Tab{12}{\V{pop}(\V{sp});}}
+\L{\LB{}\Tab{8}{\}_\K{else}_\{}}
+\L{\LB{}\Tab{12}{\K{char}_\V{name}[\N{32}];}}
+\L{\LB{}\Tab{12}{\V{Agraph\_t}_*\V{G}_=_\V{agraphof}(\V{n});;}}
+\L{\LB{}\Tab{12}{\V{sprintf}(\V{name},_\S{}\3cluster\_\%d\3\SE{},_(\V{st}\-\!\>\V{Comp})++);}}
+\L{\LB{}\Tab{12}{\V{subg}_=_\V{agsubg}(\V{G},_\V{name},_\V{TRUE});}}
+\L{\LB{}\Tab{12}{\V{agbindrec}(\V{subg},_\S{}\3scc\_graph\3\SE{},_\K{sizeof}(\V{Agraphinfo\_t}),_\V{TRUE});}}
+\L{\LB{}\Tab{12}{\V{setrep}(\V{subg},_\V{agnode}(\V{map},_\V{name},_\V{TRUE}));}}
+\L{\LB{}\Tab{12}{\K{do}_\{}}
+\L{\LB{}\Tab{16}{\V{t}_=_\V{pop}(\V{sp});}}
+\L{\LB{}\Tab{16}{\V{agsubnode}(\V{subg},_\V{t},_\V{TRUE});}}
+\L{\LB{}\Tab{16}{\V{setval}(\V{t},_\V{INF});}}
+\L{\LB{}\Tab{16}{\V{setscc}(\V{t},_\V{subg});}}
+\L{\LB{}\Tab{16}{\V{st}\-\!\>\V{N\_nodes\_in\_nontriv\_SCC}++;}}
+\L{\LB{}\Tab{12}{\}_\K{while}_(\V{t}_!=_\V{n});}}
+\L{\LB{}\Tab{12}{\V{nodeInduce}(\V{subg},_\V{map});}}
+\L{\LB{}\Tab{12}{\K{if}_(!\V{StatsOnly})}}
+\L{\LB{}\Tab{16}{\V{agwrite}(\V{subg},_\V{outfp});}}
+\L{\LB{}\Tab{8}{\}}}
 \L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\K{return}_\V{min};}}
+\L{\LB{}\Tab{4}{\K{return}_\V{min};}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{int}_}}
-\index{label}\Proc{label}\L{\LB{\V{label}(\V{Agnode\_t}_*\V{n},_\K{int}_\V{nodecnt},_\K{int}*_\V{edgecnt})}}
+\index{label}\Proc{label}\L{\LB{\K{static}_\K{int}_\V{label}(\V{Agnode\_t}_*_\V{n},_\K{int}_\V{nodecnt},_\K{int}_*\V{edgecnt})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{Agedge\_t}}\Tab{14}{*\V{e};}}
+\L{\LB{}\Tab{4}{\V{Agedge\_t}_*\V{e};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{setval}(\V{n},\N{1});}}
-\L{\LB{}\Tab{2}{\V{nodecnt}++;}}
-\L{\LB{}\Tab{2}{\K{for}_(\V{e}_=_\V{agfstedge}(\V{n});_\V{e};_\V{e}_=_\V{agnxtedge}(\V{e},\V{n}))_\{}}
-\L{\LB{}\Tab{4}{(*\V{edgecnt})_+=_\N{1};}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{e}\-\!\>\V{node}_==_\V{n})_\V{e}_=_\V{agopp}(\V{e});}}
-\L{\LB{}\Tab{4}{\K{if}_(!\V{getval}(\V{e}\-\!\>\V{node}))}}
-\L{\LB{}\Tab{6}{\V{nodecnt}_=_\V{label}(\V{e}\-\!\>\V{node},\V{nodecnt},\V{edgecnt});}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\K{return}_\V{nodecnt};}}
-\L{\LB{\}}}
-\L{\LB{}}
-\L{\LB{\K{static}_\K{int}_}}
-\index{countComponents}\Proc{countComponents}\L{\LB{\V{countComponents}(\V{Agraph\_t}_*\V{g},_\K{int}*_\V{max\_degree},_\K{float}_*\V{nontree\_frac})}}
-\L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{nc}_=_\N{0};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{sum\_edges}_=_\N{0};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{sum\_nontree}_=_\N{0};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{deg};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{n\_edges};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{13}{\V{n\_nodes};}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}*}\Tab{13}{\V{n};}}
-\L{\LB{}}
-\L{\LB{}\Tab{2}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{n}))_\{}}
-\L{\LB{}\Tab{4}{\K{if}_(!\V{getval}(\V{n}))_\{}}
-\L{\LB{}\Tab{6}{\V{nc}++;}}
-\L{\LB{}\Tab{6}{\V{n\_edges}_=_\N{0};}}
-\L{\LB{}\Tab{6}{\V{n\_nodes}_=_\V{label}(\V{n},\N{0},\&\V{n\_edges});}}
-\L{\LB{}\Tab{6}{\V{sum\_edges}_+=_\V{n\_edges};}}
-\L{\LB{}\Tab{6}{\V{sum\_nontree}_+=_(\V{n\_edges}_\-_\V{n\_nodes}_+_\N{1});}}
+\L{\LB{}\Tab{4}{\V{setval}(\V{n},_\N{1});}}
+\L{\LB{}\Tab{4}{\V{nodecnt}++;}}
+\L{\LB{}\Tab{4}{\K{for}_(\V{e}_=_\V{agfstedge}(\V{n}\-\!\>\V{root},_\V{n});_\V{e};_\V{e}_=_\V{agnxtedge}(\V{n}\-\!\>\V{root},_\V{e},_\V{n}))_\{}}
+\L{\LB{}\Tab{8}{(*\V{edgecnt})_+=_\N{1};}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{e}\-\!\>\V{node}_==_\V{n})}}
+\L{\LB{}\Tab{12}{\V{e}_=_\V{agopp}(\V{e});}}
+\L{\LB{}\Tab{8}{\K{if}_(!\V{getval}(\V{e}\-\!\>\V{node}))}}
+\L{\LB{}\Tab{12}{\V{nodecnt}_=_\V{label}(\V{e}\-\!\>\V{node},_\V{nodecnt},_\V{edgecnt});}}
 \L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{max\_degree})_\{}}
-\L{\LB{}\Tab{4}{\K{int}_\V{maxd}_=_\N{0};}}
-\L{\LB{}\Tab{4}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{n}))_\{}}
-\L{\LB{}\Tab{6}{\V{deg}_=_\V{agdegree}(\V{n},\V{TRUE},\V{TRUE});}}
-\L{\LB{}\Tab{6}{\K{if}_(\V{maxd}_\<_\V{deg})_\V{maxd}_=_\V{deg};}}
-\L{\LB{}\Tab{6}{\V{setval}(\V{n},\N{0});}}
-\L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{4}{*\V{max\_degree}_=_\V{maxd};}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{nontree\_frac})_\{}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{sum\_edges}_\>_\N{0})_*\V{nontree\_frac}_=_(\K{float})\V{sum\_nontree}_/_(\K{float})\V{sum\_edges};}}
-\L{\LB{}\Tab{4}{\K{else}_*\V{nontree\_frac}_=_\N{0.0};}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\K{return}_\V{nc};}}
+\L{\LB{}\Tab{4}{\K{return}_\V{nodecnt};}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}_}}
-\index{process}\Proc{process}\L{\LB{\V{process}(\V{Agraph\_t}*_\V{G})}}
+\L{\LB{\K{static}_\K{int}}}
+\index{countComponents}\Proc{countComponents}\L{\LB{\V{countComponents}(\V{Agraph\_t}_*_\V{g},_\K{int}_*\V{max\_degree},_\K{float}_*\V{nontree\_frac})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{Agnode\_t}*}\Tab{15}{\V{n};}}
-\L{\LB{}\Tab{2}{\V{Agraph\_t}*}\Tab{15}{\V{map};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{15}{\V{nc}_=_\N{0};}}
-\L{\LB{}\Tab{2}{\K{float}}\Tab{15}{\V{nontree\_frac};}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{15}{\V{Maxdegree};}}
-\L{\LB{}\Tab{2}{\V{Stack}}\Tab{15}{\V{stack};}}
-\L{\LB{}\Tab{2}{\V{sccstate}}\Tab{15}{\V{state};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{nc}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{sum\_edges}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{sum\_nontree}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{deg};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{n\_edges};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{n\_nodes};}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_*\V{n};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{aginit}(\V{G},\V{AGRAPH},\S{}\3scc\_graph\3\SE{},\K{sizeof}(\V{Agraphinfo\_t}),\V{TRUE});}}
-\L{\LB{}\Tab{2}{\V{aginit}(\V{G},\V{AGNODE},\S{}\3scc\_node\3\SE{},\K{sizeof}(\V{Agnodeinfo\_t}),\V{TRUE});}}
-\L{\LB{}\Tab{2}{\V{state}.\V{Comp}_=_\V{state}.\V{ID}_=_\N{0};}}
-\L{\LB{}\Tab{2}{\V{state}.\V{N\_nodes\_in\_nontriv\_SCC}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{g},_\V{n}))_\{}}
+\L{\LB{}\Tab{8}{\K{if}_(!\V{getval}(\V{n}))_\{}}
+\L{\LB{}\Tab{12}{\V{nc}++;}}
+\L{\LB{}\Tab{12}{\V{n\_edges}_=_\N{0};}}
+\L{\LB{}\Tab{12}{\V{n\_nodes}_=_\V{label}(\V{n},_\N{0},_\&\V{n\_edges});}}
+\L{\LB{}\Tab{12}{\V{sum\_edges}_+=_\V{n\_edges};}}
+\L{\LB{}\Tab{12}{\V{sum\_nontree}_+=_(\V{n\_edges}_\-_\V{n\_nodes}_+_\N{1});}}
+\L{\LB{}\Tab{8}{\}}}
+\L{\LB{}\Tab{4}{\}}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{max\_degree})_\{}}
+\L{\LB{}\Tab{8}{\K{int}_\V{maxd}_=_\N{0};}}
+\L{\LB{}\Tab{8}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{g});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{g},_\V{n}))_\{}}
+\L{\LB{}\Tab{12}{\V{deg}_=_\V{agdegree}(\V{g},_\V{n},_\V{TRUE},_\V{TRUE});}}
+\L{\LB{}\Tab{12}{\K{if}_(\V{maxd}_\<_\V{deg})}}
+\L{\LB{}\Tab{16}{\V{maxd}_=_\V{deg};}}
+\L{\LB{}\Tab{12}{\V{setval}(\V{n},_\N{0});}}
+\L{\LB{}\Tab{8}{\}}}
+\L{\LB{}\Tab{8}{*\V{max\_degree}_=_\V{maxd};}}
+\L{\LB{}\Tab{4}{\}}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{nontree\_frac})_\{}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{sum\_edges}_\>_\N{0})}}
+\L{\LB{}\Tab{12}{*\V{nontree\_frac}_=_(\K{float})_\V{sum\_nontree}_/_(\K{float})_\V{sum\_edges};}}
+\L{\LB{}\Tab{8}{\K{else}}}
+\L{\LB{}\Tab{12}{*\V{nontree\_frac}_=_\N{0.0};}}
+\L{\LB{}\Tab{4}{\}}}
+\L{\LB{}\Tab{4}{\K{return}_\V{nc};}}
+\L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{Verbose})}}
-\L{\LB{}\Tab{4}{\V{nc}_=_\V{countComponents}(\V{G},\&\V{Maxdegree},\&\V{nontree\_frac});}}
+\index{process}\Proc{process}\L{\LB{\K{static}_\K{void}_\V{process}(\V{Agraph\_t}_*_\V{G})}}
+\L{\LB{\{}}
+\L{\LB{}\Tab{4}{\V{Agnode\_t}_*\V{n};}}
+\L{\LB{}\Tab{4}{\V{Agraph\_t}_*\V{map};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{nc}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{float}_\V{nontree\_frac}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{Maxdegree}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\V{Stack}_\V{stack};}}
+\L{\LB{}\Tab{4}{\V{sccstate}_\V{state};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{initStack}(\&\V{stack},_\V{agnnodes}(\V{G})_+_\N{1});}}
-\L{\LB{}\Tab{2}{\V{map}_=_\V{agopen}(\S{}\3scc\_map\3\SE{},\V{Agdirected},(\V{Agdisc\_t}_*)\N{0});}}
-\L{\LB{}\Tab{2}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{G});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{n}))}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{getval}(\V{n})_==_\N{0})_\V{visit}(\V{n},\V{map},\&\V{stack},\&\V{state});}}
-\L{\LB{}\Tab{2}{\V{freeStack}(\&\V{stack});}}
-\L{\LB{}\Tab{2}{\K{if}_(!\V{Silent})_\V{agwrite}(\V{map},\V{stdout});}}
-\L{\LB{}\Tab{2}{\V{agclose}(\V{map});}}
+\L{\LB{}\Tab{4}{\V{aginit}(\V{G},_\V{AGRAPH},_\S{}\3scc\_graph\3\SE{},_\K{sizeof}(\V{Agraphinfo\_t}),_\V{TRUE});}}
+\L{\LB{}\Tab{4}{\V{aginit}(\V{G},_\V{AGNODE},_\S{}\3scc\_node\3\SE{},_\K{sizeof}(\V{Agnodeinfo\_t}),_\V{TRUE});}}
+\L{\LB{}\Tab{4}{\V{state}.\V{Comp}_=_\V{state}.\V{ID}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\V{state}.\V{N\_nodes\_in\_nontriv\_SCC}_=_\N{0};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{Verbose})_}}
-\L{\LB{}\Tab{4}{\V{fprintf}(\V{stderr},\S{}\3\%d_\%d_\%d_\%d_\%.4f_\%d_\%.4f\2n\3\SE{},}}
-\L{\LB{}\Tab{6}{\V{agnnodes}(\V{G}),_\V{agnedges}(\V{G}),_\V{nc},_\V{state}.\V{Comp},}}
-\L{\LB{}\Tab{6}{\V{state}.\V{N\_nodes\_in\_nontriv\_SCC}_/_(\K{double})_\V{agnnodes}(\V{G}),_\V{Maxdegree},}}
-\L{\LB{}\Tab{6}{\V{nontree\_frac});}}
-\L{\LB{}\Tab{2}{\K{else}}}
-\L{\LB{}\Tab{4}{\V{fprintf}(\V{stderr},\S{}\3\%d_nodes,_\%d_edges,_\%d_strong_components\2n\3\SE{},}}
-\L{\LB{}\Tab{6}{\V{agnnodes}(\V{G}),_\V{agnedges}(\V{G}),_\V{state}.\V{Comp});}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{Verbose})}}
+\L{\LB{}\Tab{8}{\V{nc}_=_\V{countComponents}(\V{G},_\&\V{Maxdegree},_\&\V{nontree\_frac});}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\V{initStack}(\&\V{stack},_\V{agnnodes}(\V{G})_+_\N{1});}}
+\L{\LB{}\Tab{4}{\V{map}_=_\V{agopen}(\S{}\3scc\_map\3\SE{},_\V{Agdirected},_(\V{Agdisc\_t}_*)_\N{0});}}
+\L{\LB{}\Tab{4}{\K{for}_(\V{n}_=_\V{agfstnode}(\V{G});_\V{n};_\V{n}_=_\V{agnxtnode}(\V{G},_\V{n}))}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{getval}(\V{n})_==_\N{0})}}
+\L{\LB{}\Tab{12}{\V{visit}(\V{n},_\V{map},_\&\V{stack},_\&\V{state});}}
+\L{\LB{}\Tab{4}{\V{freeStack}(\&\V{stack});}}
+\L{\LB{}\Tab{4}{\K{if}_(!\V{StatsOnly})}}
+\L{\LB{}\Tab{8}{\V{agwrite}(\V{map},_\V{outfp});}}
+\L{\LB{}\Tab{4}{\V{agclose}(\V{map});}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{Verbose})}}
+\L{\LB{}\Tab{8}{\V{fprintf}(\V{stderr},_\S{}\3\%d_\%d_\%d_\%d_\%.4f_\%d_\%.4f\2n\3\SE{},}}
+\L{\LB{}\Tab{16}{\V{agnnodes}(\V{G}),_\V{agnedges}(\V{G}),_\V{nc},_\V{state}.\V{Comp},}}
+\L{\LB{}\Tab{16}{\V{state}.\V{N\_nodes\_in\_nontriv\_SCC}_/_(\K{double})_\V{agnnodes}(\V{G}),}}
+\L{\LB{}\Tab{16}{\V{Maxdegree},_\V{nontree\_frac});}}
+\L{\LB{}\Tab{4}{\K{else}_\K{if}_(!\V{Silent})}}
+\L{\LB{}\Tab{8}{\V{fprintf}(\V{stderr},_\S{}\3\%d_nodes,_\%d_edges,_\%d_strong_components\2n\3\SE{},}}
+\L{\LB{}\Tab{16}{\V{agnnodes}(\V{G}),_\V{agnedges}(\V{G}),_\V{state}.\V{Comp});}}
 \L{\LB{}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{char}*_\V{useString}_=_}}
-\L{\LB{\S{}\3Usage:_\%s_[\-sdv?]_\<files\>\2n\2}}
-\L{\LB{}\Tab{2}{\-s_\-_silent\2n\2}}
-\L{\LB{}\Tab{2}{\-d_\-_allow_degenerate_components\2n\2}}
-\L{\LB{}\Tab{2}{\-v_\-_verbose\2n\2}}
-\L{\LB{}\Tab{2}{\-?_\-_print_usage\2n\2}}
+\index{openFile}\Proc{openFile}\L{\LB{\K{static}_\V{FILE}_*\V{openFile}(\K{char}_*\V{name},_\K{char}_*\V{mode})}}
+\L{\LB{\{}}
+\L{\LB{}\Tab{4}{\V{FILE}_*\V{fp};}}
+\L{\LB{}\Tab{4}{\K{char}_*\V{modestr};}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\V{fp}_=_\V{fopen}(\V{name},_\V{mode});}}
+\L{\LB{}\Tab{4}{\K{if}_(!\V{fp})_\{}}
+\L{\LB{}\Tab{8}{\K{if}_(*\V{mode}_==_\S{}{'}r{'}\SE{})}}
+\L{\LB{}\Tab{12}{\V{modestr}_=_\S{}\3reading\3\SE{};}}
+\L{\LB{}\Tab{8}{\K{else}}}
+\L{\LB{}\Tab{12}{\V{modestr}_=_\S{}\3writing\3\SE{};}}
+\L{\LB{}\Tab{8}{\V{fprintf}(\V{stderr},_\S{}\3gvpack:_could_not_open_file_\%s_for_\%s\2n\3\SE{},}}
+\L{\LB{}\Tab{16}{\V{name},_\V{modestr});}}
+\L{\LB{}\Tab{8}{\V{exit}(\N{1});}}
+\L{\LB{}\Tab{4}{\}}}
+\L{\LB{}\Tab{4}{\K{return}_(\V{fp});}}
+\L{\LB{\}}}
+\L{\LB{}}
+\L{\LB{\K{static}_\K{char}_*\V{useString}_=_\S{}\3Usage:_\%s_[\-sdv?]_\<files\>\2n\2}}
+\L{\LB{}\Tab{2}{\-s}\Tab{15}{\-_only_produce_statistics\2n\2}}
+\L{\LB{}\Tab{2}{\-S}\Tab{15}{\-_silent\2n\2}}
+\L{\LB{}\Tab{2}{\-d}\Tab{15}{\-_allow_degenerate_components\2n\2}}
+\L{\LB{}\Tab{2}{\-o\<outfile\>}\Tab{15}{\-_write_to_\<outfile\>_(stdout)\2n\2}}
+\L{\LB{}\Tab{2}{\-v}\Tab{15}{\-_verbose\2n\2}}
+\L{\LB{}\Tab{2}{\-?}\Tab{15}{\-_print_usage\2n\2}}
 \L{\LB{If_no_files_are_specified,_stdin_is_used\2n\3\SE{};}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}}}
-\index{usage}\Proc{usage}\L{\LB{\V{usage}_(\K{int}_\V{v})}}
+\index{usage}\Proc{usage}\L{\LB{\K{static}_\K{void}_\V{usage}(\K{int}_\V{v})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{4}{\V{printf}_(\V{useString},_\V{CmdName});}}
-\L{\LB{}\Tab{4}{\V{exit}_(\V{v});}}
+\L{\LB{}\Tab{4}{\V{printf}(\V{useString},_\V{CmdName});}}
+\L{\LB{}\Tab{4}{\V{exit}(\V{v});}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\K{void}}}
-\index{scanArgs}\Proc{scanArgs}\L{\LB{\V{scanArgs}(\K{int}_\V{argc},\K{char}_**\V{argv})}}
+\index{scanArgs}\Proc{scanArgs}\L{\LB{\K{static}_\K{void}_\V{scanArgs}(\K{int}_\V{argc},_\K{char}_**\V{argv})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{int}}\Tab{17}{\V{c};}}
+\L{\LB{}\Tab{4}{\K{int}_\V{c};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{CmdName}_=_\V{argv}[\N{0}];}}
-\L{\LB{}\Tab{2}{\K{while}_((\V{c}_=_\V{getopt}(\V{argc},\V{argv},\S{}\3:?sdv\3\SE{}))_!=_\V{EOF})_\{}}
-\L{\LB{}\Tab{4}{\K{switch}_(\V{c})_\{}}
-\L{\LB{}\Tab{4}{\K{case}_\S{}{'}s{'}\SE{}:_}}
-\L{\LB{}\Tab{6}{\V{Silent}_=_\N{1};_\K{break};}}
-\L{\LB{}\Tab{4}{\K{case}_\S{}{'}d{'}\SE{}:_}}
-\L{\LB{}\Tab{6}{\V{wantDegenerateComp}_=_\N{1};_\K{break};}}
-\L{\LB{}\Tab{4}{\K{case}_\S{}{'}v{'}\SE{}:_}}
-\L{\LB{}\Tab{6}{\V{Verbose}_=_\N{1};_\K{break};}}
-\L{\LB{}\Tab{4}{\K{case}_\S{}{'}?{'}\SE{}:}}
-\L{\LB{}\Tab{6}{\K{if}_(\V{optopt}_==_\S{}{'}?{'}\SE{})_\V{usage}(\N{0});}}
-\L{\LB{}\Tab{6}{\K{else}_\V{fprintf}(\V{stderr},\S{}\3\%s:_option_\-\%c_unrecognized_\-_ignored\2n\3\SE{},_}}
-\L{\LB{}\Tab{8}{\V{CmdName},_\V{c});}}
-\L{\LB{}\Tab{6}{\K{break};}}
+\L{\LB{}\Tab{4}{\V{CmdName}_=_\V{argv}[\N{0}];}}
+\L{\LB{}\Tab{4}{\V{opterr}_=_\N{0};}}
+\L{\LB{}\Tab{4}{\K{while}_((\V{c}_=_\V{getopt}(\V{argc},_\V{argv},_\S{}\3:o:sdvS\3\SE{}))_!=_\V{EOF})_\{}}
+\L{\LB{}\Tab{8}{\K{switch}_(\V{c})_\{}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}s{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\V{StatsOnly}_=_\N{1};}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}d{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\V{wantDegenerateComp}_=_\N{1};}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}o{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\V{outfp}_=_\V{openFile}(\V{optarg},_\S{}\3w\3\SE{});}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}v{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\V{Verbose}_=_\N{1};}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}S{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\V{Verbose}_=_\N{0};}}
+\L{\LB{}\Tab{12}{\V{Silent}_=_\N{1};}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\K{case}_\S{}{'}?{'}\SE{}:}}
+\L{\LB{}\Tab{12}{\K{if}_(\V{optopt}_==_\S{}{'}?{'}\SE{})}}
+\L{\LB{}\Tab{16}{\V{usage}(\N{0});}}
+\L{\LB{}\Tab{12}{\K{else}}}
+\L{\LB{}\Tab{16}{\V{fprintf}(\V{stderr},_\S{}\3\%s:_option_\-\%c_unrecognized_\-_ignored\2n\3\SE{},}}
+\L{\LB{}\Tab{24}{\V{CmdName},_\V{optopt});}}
+\L{\LB{}\Tab{12}{\K{break};}}
+\L{\LB{}\Tab{8}{\}}}
 \L{\LB{}\Tab{4}{\}}}
-\L{\LB{}\Tab{2}{\}}}
-\L{\LB{}\Tab{2}{\V{argv}_+=_\V{optind};}}
-\L{\LB{}\Tab{2}{\V{argc}_\-=_\V{optind};}}
-\L{\LB{}\Tab{2}{}}
-\L{\LB{}\Tab{2}{\K{if}_(\V{argc})_\V{Files}_=_\V{argv};}}
+\L{\LB{}\Tab{4}{\V{argv}_+=_\V{optind};}}
+\L{\LB{}\Tab{4}{\V{argc}_\-=_\V{optind};}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\K{if}_(\V{argc})}}
+\L{\LB{}\Tab{8}{\V{Files}_=_\V{argv};}}
+\L{\LB{}\Tab{4}{\K{if}_(!\V{outfp})}}
+\L{\LB{}\Tab{8}{\V{outfp}_=_\V{stdout};}\Tab{32}{\C{}/*_stdout_the_default_*/\CE{}}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{static}_\V{Agraph\_t}*}}
-\index{gread}\Proc{gread}\L{\LB{\V{gread}_(\V{FILE}*_\V{fp})}}
+\index{gread}\Proc{gread}\L{\LB{\K{static}_\V{Agraph\_t}_*\V{gread}(\V{FILE}_*_\V{fp})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\K{return}_\V{agread}(\V{fp},(\V{Agdisc\_t}*)\N{0});}}
+\L{\LB{}\Tab{4}{\K{return}_\V{agread}(\V{fp},_(\V{Agdisc\_t}_*)_\N{0});}}
 \L{\LB{\}}}
 \L{\LB{}}
-\L{\LB{\K{int}_}}
-\index{main}\Proc{main}\L{\LB{\V{main}(\K{int}_\V{argc},_\K{char}_**\V{argv})}}
+\index{main}\Proc{main}\L{\LB{\K{int}_\V{main}(\K{int}_\V{argc},_\K{char}_**\V{argv})}}
 \L{\LB{\{}}
-\L{\LB{}\Tab{2}{\V{Agraph\_t}*}\Tab{16}{\V{g};}}
-\L{\LB{}\Tab{2}{\V{ingraph\_state}_\V{ig};}}
+\L{\LB{}\Tab{4}{\V{Agraph\_t}_*\V{g};}}
+\L{\LB{}\Tab{4}{\V{ingraph\_state}_\V{ig};}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\V{scanArgs}(\V{argc},\V{argv});}}
-\L{\LB{}\Tab{2}{\V{newIngraph}_(\&\V{ig},_\V{Files},_\V{gread});}}
-\L{\LB{}\Tab{2}{}}
-\L{\LB{}\Tab{2}{\K{while}_((\V{g}_=_\V{nextGraph}(\&\V{ig}))_!=_\N{0})_\{}}
-\L{\LB{}\Tab{4}{\K{if}_(\V{agisdirected}(\V{g}))_\V{process}_(\V{g});}}
-\L{\LB{}\Tab{4}{\K{else}_\V{fprintf}_(\V{stderr},_\S{}\3Graph_\%s_in_\%s_is_undirected_\-_ignored\2n\3\SE{},_}}
-\L{\LB{}\Tab{6}{\V{agnameof}(\V{g}),_\V{fileName}(\&\V{ig}));}}
-\L{\LB{}\Tab{4}{\V{agclose}_(\V{g});}}
-\L{\LB{}\Tab{2}{\}}}
+\L{\LB{}\Tab{4}{\V{scanArgs}(\V{argc},_\V{argv});}}
+\L{\LB{}\Tab{4}{\V{newIngraph}(\&\V{ig},_\V{Files},_\V{gread});}}
 \L{\LB{}}
-\L{\LB{}\Tab{2}{\K{return}_\N{0};}}
+\L{\LB{}\Tab{4}{\K{while}_((\V{g}_=_\V{nextGraph}(\&\V{ig}))_!=_\N{0})_\{}}
+\L{\LB{}\Tab{8}{\K{if}_(\V{agisdirected}(\V{g}))}}
+\L{\LB{}\Tab{12}{\V{process}(\V{g});}}
+\L{\LB{}\Tab{8}{\K{else}}}
+\L{\LB{}\Tab{12}{\V{fprintf}(\V{stderr},_\S{}\3Graph_\%s_in_\%s_is_undirected_\-_ignored\2n\3\SE{},}}
+\L{\LB{}\Tab{20}{\V{agnameof}(\V{g}),_\V{fileName}(\&\V{ig}));}}
+\L{\LB{}\Tab{8}{\V{agclose}(\V{g});}}
+\L{\LB{}\Tab{4}{\}}}
+\L{\LB{}}
+\L{\LB{}\Tab{4}{\K{return}_\N{0};}}
 \L{\LB{\}}}
-\L{\LB{}}
