--- a/README
+++ b/README
@@ -4,5 +4,5 @@ See doc/build.html for prerequisites and detailed build notes.
 
 Adding a test line
 Adding a second test line
-Adding a third test line
+Adding a 3rd test line
 Adding a 5th test line
